[package]
name = "all_results_reader_rust"
version = "0.1.0"
authors = ["姚思凯 <yaosikai@qiyi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"

